# Sorgens-Kammer

./: README.md  pyproject.toml
sorgens_kammer/: construct_dict.py  construct_list_out_of_two.py  decorator_args.py  diagonals.py  fib.py  file_system_handler.py  functional.py  grep_logs.py  ids.py  longest_seq.py  loop_list.py  matrix.py  median.py  parentheses.py  recursion.py  sorting.py  validate_login.py  xml_archives.py
sorgens_kammer/exercises/: add_nums_linked_list.py  construct_dict.py  flatten_config.py  longest_common_prefix.py  longest_palindrome_substring.py  longest_seq.py  longest_substring_no_repeats.py  matrix.py  merge_lists.py  parentheses.py  phone_letter_combinations.py  three_sum.py
sorgens_kammer/tasks/: file_system_handler.py  validate_login.py  xml_archives.py
sorgens_kammer/theory/: decorator_args.py  functional.py  ids.py  recursion.py
